# joy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  asm.epoch  cloc  other_file.df  test.df
code/: arena.hh  args.odin  array.hh  assert.hh  ast.cc  ast.hh  ast.odin  codegen.odin  codegen_c99.odin  codegen_opto.odin  compiler.cc  compiler.hh  compiler.odin  constant_eval.odin  file_manager.cc  file_manager.hh  file_manager.odin  lexer.cc  lexer.hh  log.cc  log.hh  logging.odin  main.cc  main.odin  operators.hh  parser.cc  parser.hh  parser.odin  profiling.hh  program.hh  target.odin  token.cc  token.hh  tokenizer.odin  type_registry.cc  type_registry.hh  typechecker.cc  typechecker.hh  typechecker.odin  types.odin
code/epoch/: node.odin
editors/nvim/ftdetect/: dragonfly.vim  joy.vim
editors/nvim/syntax/: dragonfly.vim  joy.vim
epoch/: arch.odin  arch_amd64.odin  asm.odin  block.odin  codegen.odin  context.odin  debug_type.odin  linker.odin  logging.odin  node.odin  optimizer.odin  passes.odin  print_asm.odin  print_eviz.odin  print_graphviz.odin  type.odin  worklist.odin
opto/: arch.odin  arch_aarch64_backend.odin  arch_amd64.odin  arch_amd64_backend.odin  block.odin  codegen.odin  context.odin  debug_type.odin  linker.odin  logging.odin  node.odin  optimizer.odin  passes.odin  print_graphviz.odin  regalloc_click.odin  type.odin  worklist.odin
src/: arena.hh  ast.cc  ast.hh  compiler.cc  compiler.hh  job_system.cc  job_system.hh  lexer.cc  lexer.hh  main.cc  parser.cc  parser.hh  profiling.hh  program.cc  program.hh  token.cc  token.hh  type.hh  typechecker.cc  typechecker.hh
test/basic/: main.dfly  main.j  main.joy
test_files/: lexer_test.df  other_file.df  parser_test.df  test.df
test_files/smoke/: a.df  c.df  d.df  f.df  g.df
viz/: main.odin
